--- a/pom.xml
+++ b/pom.xml
@@ -23,17 +23,19 @@
 						${path.anchor}/anchor-annotation-io/${path.suffix.javadoc};
 						${path.anchor}/anchor-bean/${path.suffix.javadoc};
 						${path.anchor}/anchor-beans-shared/${path.suffix.javadoc};
+						${path.anchor}/anchor-spatial/${path.suffix.javadoc};
 						${path.anchor}/anchor-core/${path.suffix.javadoc};
 						${path.anchor}/anchor-experiment/${path.suffix.javadoc};
 						${path.anchor}/anchor-core/${path.suffix.javadoc};
 						${path.anchor}/anchor-feature/${path.suffix.javadoc};
 						${path.anchor}/anchor-feature-io/${path.suffix.javadoc};
 						${path.anchor}/anchor-feature-session/${path.suffix.javadoc};
-						${path.anchor}/anchor-image/${path.suffix.javadoc};
+						${path.anchor}/anchor-image-core/${path.suffix.javadoc};
+						${path.anchor}/anchor-image-voxel/${path.suffix.javadoc};
 						${path.anchor}/anchor-image-bean/${path.suffix.javadoc};
 						${path.anchor}/anchor-image-experiment/${path.suffix.javadoc};
 						${path.anchor}/anchor-image-feature/${path.suffix.javadoc};
-						${path.anchor}/anchor-image-io/${path.suffix.javadoc};
+						${path.anchor}/anchor-image-io-input/${path.suffix.javadoc};
 						${path.anchor}/anchor-io/${path.suffix.javadoc};
 						${path.anchor}/anchor-io-bioformats/${path.suffix.javadoc};
 						${path.anchor}/anchor-io-generator/${path.suffix.javadoc};
@@ -50,6 +52,7 @@
 						${path.anchor}/anchor-test/${path.suffix.javadoc};
 						${path.anchor}/anchor-test-feature/${path.suffix.javadoc};
 						${path.anchor}/anchor-test-image/${path.suffix.javadoc}
+						${path.anchor}/anchor-test-io-output/${path.suffix.javadoc}
 		</source.path.anchor>	   
 	   <source.path.anchor-plugins>${path.anchor-plugins}/anchor-plugin-image/${path.suffix.javadoc};
 			${path.anchor-plugins}/anchor-plugin-image-feature/${path.suffix.javadoc};
