--- a/.github/workflows/maven_master.yml
+++ b/.github/workflows/maven_master.yml
@@ -25,8 +25,7 @@ jobs:
     steps:
     - name: Checkout reposistory
       uses: actions/checkout@v2
-    - name: Checkout submodules
-      uses: textbook/git-checkout-submodule-action@master    
+      submodules: true
     - name: Set up JDK 8
       uses: actions/setup-java@v1
       with:
