--- a/.github/workflows/maven_master.yml
+++ b/.github/workflows/maven_master.yml
@@ -25,7 +25,8 @@ jobs:
     steps:
     - name: Checkout reposistory
       uses: actions/checkout@v2
-      submodules: true
+      with:
+        submodules: true
     - name: Set up JDK 8
       uses: actions/setup-java@v1
       with:
