--- a/.github/workflows/maven_master.yml
+++ b/.github/workflows/maven_master.yml
@@ -26,7 +26,8 @@ jobs:
     - name: Checkout reposistory
       uses: actions/checkout@v2
       with:
-        submodules: true
+        submodules: 'recursive'
+        fetch-depth: '0'    ***********
     - name: Set up JDK 8
       uses: actions/setup-java@v1
       with:
@@ -49,9 +50,9 @@ jobs:
     - name: Build with Maven
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: mvn --batch-mode -f anchor-all-except-gui/pom.xml site javadoc:jar
+      run: mvn --batch-mode -f anchor-all-except-gui/pom.xml site javadoc:aggregate
       
-    - name: Upload javadocs
+    - name: Upload javadoc
       uses: actions/upload-artifact@v2
       with:
         name: anchor-javadoc-except-gui
