--- a/.github/workflows/maven_master.yml
+++ b/.github/workflows/maven_master.yml
@@ -26,8 +26,8 @@ jobs:
     - name: Checkout reposistory
       uses: actions/checkout@v2
       with:
-        submodules: 'recursive'
-        fetch-depth: '0'    ***********
+        submodules: recursive
+        fetch-depth: 0
     - name: Set up JDK 8
       uses: actions/setup-java@v1
       with:
