anchor#105 deploying automatically anchor-all-except-gui to gh-pages branch.

--- a/.github/workflows/maven_master.yml
+++ b/.github/workflows/maven_master.yml
@@ -56,3 +56,11 @@ jobs:
       with:
         name: anchor-javadoc-except-gui
         path: anchor-all-except-gui/target/site/apidocs
+        
+    - name: Deploy to GitHubPages
+            uses: JamesIves/github-pages-deploy-action@3.7.1
+            with:
+              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              BRANCH: gh-pages
+              FOLDER: anchor-all-except-gui/target/site/apidocs
+              CLEAN: true
