--- a/.github/workflows/maven_master.yml
+++ b/.github/workflows/maven_master.yml
@@ -42,7 +42,7 @@ jobs:
       with:
         servers: |
             [{
-                "id": "github_path_path_finder",
+                "id": "path-pattern-finder",
                 "username": "$GITHUB_ACTOR",
                 "password": "${{ secrets.GITHUB_TOKEN }}"
             }]    
