--- a/anchor-plugins/pom.xml
+++ b/anchor-plugins/pom.xml
@@ -31,6 +31,7 @@
 	   <module>${path.anchor-plugins}/anchor-plugin-annotation</module>
 	   <module>${path.anchor-plugins}/anchor-plugin-opencv</module>
 	   <module>${path.anchor-plugins}/anchor-plugin-operator-feature</module>
+	   <module>${path.anchor-plugins}/anchor-plugin-onnx</module>
 		<module>${path.anchor-plugins}/anchor-test-experiment</module>
 		<module>${path.anchor-plugins}/anchor-test-mpp</module>
 		<module>${path.anchor-plugins}/anchor-test-feature-plugins</module>
