--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
   <parent>
         <groupId>org.anchoranalysis.anchor</groupId>
    	    <artifactId>anchor-pom</artifactId>
-		<version>0.0.16-SNAPSHOT</version>
+		<version>1.0.0.SNAPSHOT</version>
     </parent> 
 	
     <artifactId>anchor-javadoc-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <name>Parent of Javadoc projects</name>
     <url>http://www.anchoranalysis.org/</url>
 	<description>Generates Javadoc for Anchor</description>
@@ -105,28 +105,19 @@
 		</source.path.anchor-assembly>		
     </properties>
 	
-	<!-- Provides a means of reaching anchor-pom and ImageJ -->
-    <repositories>
-		<repository>
-		  <releases>
-			<enabled>true</enabled>
-			<updatePolicy>never</updatePolicy>
-			<checksumPolicy>warn</checksumPolicy>
-		  </releases>
-		  <snapshots>
-			<enabled>true</enabled>
-			<updatePolicy>always</updatePolicy>
-			<checksumPolicy>warn</checksumPolicy>
-		  </snapshots>
-		  <id>github</id>
-		   <name>GitHub anchor Apache Maven Packages</name>
-		   <url>https://maven.pkg.github.com/anchoranalysis/anchor-javadoc</url>
-		  <layout>default</layout>
-		</repository>
+		<!-- Provides a means of reaching Snapshots on Maven Central -->
+	  <repository>
+		<name>Central Portal Snapshots</name>
+		<id>central-portal-snapshots</id>
+		<url>https://central.sonatype.com/repository/maven-snapshots/</url>
+		<releases>
+		  <enabled>false</enabled>
+		</releases>
+		<snapshots>
+		  <enabled>true</enabled>
+		</snapshots>
+	  </repository>
 		
-   	</repositories>
-	
-	
     	<build>
 	    
 		<plugins>
