--- a/.github/workflows/maven_master.yml
+++ b/.github/workflows/maven_master.yml
@@ -22,30 +22,38 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+      MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+      GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+        
     steps:
-    - name: Checkout reposistory
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
+    - name: Set up JDK ${{inputs.java-version}}
+      uses: actions/setup-java@v4
       with:
-        submodules: recursive
-    - name: Set up JDK 8
-      uses: actions/setup-java@v1
+        java-version: ${{inputs.java-version}}
+        distribution: temurin
+        server-id: central
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD
+        gpg-private-key: ${{ secrets.GPG_SIGNING_KEY }}
+        gpg-passphrase: GPG_PASSPHRASE
+
+    - name: Cache SonarCloud packages
+      uses: actions/cache@v4
       with:
-        java-version: 8
+        path: ~/.sonar/cache
+        key: ${{ runner.os }}-sonar
+        restore-keys: ${{ runner.os }}-sonar
+      if: ${{ inputs.cache-sonar }}          
+
     - name: Cache Maven packages
-      uses: actions/cache@v2
+      uses: actions/cache@v4
       with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}-jdk8
-        restore-keys: ${{ runner.os }}-m2
-    - name: Create settings.xml for Maven
-      uses: s4u/maven-settings-action@v2.2.0
-      with:
-        servers: |
-            [{
-                "id": "path-pattern-finder",
-                "username": "$GITHUB_ACTOR",
-                "password": "${{ secrets.GITHUB_TOKEN }}"
-            }]    
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}-jdk${{inputs.os}}-rep
+        restore-keys: ${{ runner.os }}-m2 
     - name: Build with Maven
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
