--- a/.github/workflows/maven_master.yml
+++ b/.github/workflows/maven_master.yml
@@ -29,10 +29,10 @@ jobs:
         
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK ${{inputs.java-version}}
+    - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
-        java-version: ${{inputs.java-version}}
+        java-version: 21
         distribution: temurin
         server-id: central
         server-username: MAVEN_USERNAME
