--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,7 @@
 		</source.path.anchor-assembly>		
     </properties>
 	
+	<repositories>
 		<!-- Provides a means of reaching Snapshots on Maven Central -->
 	  <repository>
 		<name>Central Portal Snapshots</name>
@@ -117,6 +118,7 @@
 		  <enabled>true</enabled>
 		</snapshots>
 	  </repository>
+	</repositories>	  
 		
     	<build>
 	    
