Ensure submodules are checked-out in CI/CD

--- a/.github/workflows/maven_master.yml
+++ b/.github/workflows/maven_master.yml
@@ -28,7 +28,9 @@ jobs:
       GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
+      with:
+         submodules: true
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
