--- a/.github/workflows/maven_master.yml
+++ b/.github/workflows/maven_master.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Deploy to GitHubPages
       uses: JamesIves/github-pages-deploy-action@v4
       with:
-        token: ${{ secrets.PERSONAL_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         branch: gh-pages
         folder: anchor-all/target/site/apidocs
         clean: true
